# fastapi

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
application/: settings.py
application/config/: __init__.py  production.py
config/: __init__.py  dev.py  prod.py
core/: __init__.py  middle.py  server.py
database/: __init__.py  mysql.py  redis.py
migrations/base/: 0_20230418203607_init.py
models/: Mixin.py  __init__.py  article.py  comment.py  config.py  email.py  log.py  tags.py
router/: ResponseType.py  __init__.py  mock.py  test.py
router/article/: index.py  type.py
router/comment/: index.py  type.py
router/log/: index.py  type.py
sql/: config.sql
utils/: FileExecution.py  SendEmail.py  __init__.py  initdb.py  logger.py  paginate.py  response.py  status.py
